<resources>

    <string name="app_name">Android Shopper</string>
    <string name="add_item__title">Add</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_dialog__message">Are you sure?</string>
    <string name="do_debug_action__label">Do Magic</string>
    <string name="main_activity__label">Shopper</string>
    <string name="remove_item__title">Remove</string>
    <string name="remove_all_items__title">Remove All</string>
    <string name="remove_all_items__toast">Removed All</string>
    <string name="remove_all_items__confirm_dialog__title">Delete All</string>
    <string name="export_items__title">Export To File</string>
    <!-- <string name="export_items__toast">Exported To File</string> -->
    <string name="export_items__device_busy_error">External storage is not writable.</string>
    <string name="import_items__title">Import From File</string>
    <string name="import_items__toast">Imported From File</string>
    <string name="import_items__device_busy_error">External storage is not readable.</string>
    <string name="alter_amount">Alter amount</string>
    <string name="increase_amount">Increase amount</string>
    <string name="decrease_amount">Decrease amount</string>
    <string name="alter_item_amount__text">+/-</string>
    <string name="increase_item_amount__text">+</string>
    <string name="decrease_item_amount__text">-</string>
    <string name="lower_item">Lower item</string>
    <string name="raise_item_amount__text">^</string>
    <string name="raise_item">Raise item</string>
    <string name="lower_item_amount__text">V</string>
    <string name="item_name">Item Name</string>
    <string name="toggle_shown__title">Toggle Shown</string>
    
<!--         <string name="app_name">File dialog</string> -->
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
<!--     <string name="cancel">Cancel</string> -->
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
<!--     <color name="gray">#ffff0000</color> -->
<!--     <string name="err">Error</string> -->
    

</resources>