<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/toggle_shown_menu_item"
        android:alphabeticShortcut="t"
        android:icon="@android:drawable/ic_menu_view"
        android:numericShortcut="1"
        android:orderInCategory="100"
        android:title="Toggle Shown"/>
    <item
        android:id="@+id/add_item_menu_item"
        android:alphabeticShortcut="a"
        android:icon="@android:drawable/ic_menu_add"
        android:numericShortcut="2"
        android:orderInCategory="200"
        android:title="@string/add_item__title"/>
    <item
        android:id="@+id/remove_item_menu_item"
        android:alphabeticShortcut="r"
        android:icon="@android:drawable/ic_menu_delete"
        android:numericShortcut="3"
        android:orderInCategory="300"
        android:title="@string/remove_item__title"/>
    <item
        android:id="@+id/remove_all_items_menu_item"
        android:alphabeticShortcut="l"
        android:icon="@android:drawable/ic_menu_delete"
        android:numericShortcut="4"
        android:orderInCategory="400"
        android:title="@string/remove_all_items__title"/>
    <item
        android:id="@+id/do_debug_action_menu_item"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_save"
        android:numericShortcut="5"
        android:orderInCategory="500"
        android:title="@string/do_debug_action__label"/>
    <item
        android:id="@+id/preferences_menu_item"
        android:alphabeticShortcut="p"
        android:icon="@android:drawable/ic_menu_preferences"
        android:numericShortcut="6"
        android:orderInCategory="600"
        android:title="@string/preferences__label"/>

</menu>